<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="@dimen/max"
        android:layout_height="wrap_content"
        android:hint="@string/memoHint"
        android:textSize="15sp"
        android:textColorHint="@color/colorPrimaryLight"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn"
        app:layout_constraintBottom_toTopOf="@id/inputDescription"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:maxLength="25"
        android:layout_marginStart="8dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:textSize="15sp"
        android:textColorHint="@color/colorPrimaryLight"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:layout_constraintRight_toLeftOf="@id/btn"
        app:layout_constraintBottom_toTopOf="@id/myrecyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/icons8_aide_100"
        android:elevation="2dp"
        android:onClick="showHelp"
        android:contentDescription="@string/help" />

    <TextView
        android:id="@+id/ynov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ynov"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn"
        app:layout_constraintRight_toRightOf="@id/btn"
        app:layout_constraintLeft_toLeftOf="@id/btn"/>

    <Button
        android:id="@+id/btn"
        android:onClick="insertMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/inputDescription"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myrecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDescription"
        app:layout_constraintBottom_toTopOf="@id/deleteAll"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/deleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/myrecyclerview"
        app:layout_constraintRight_toLeftOf="@id/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/myrecyclerview"
        android:layout_marginBottom="15dp"
        android:onClick="deleteAll"/>

</androidx.constraintlayout.widget.ConstraintLayout>